Closed Bug 801344 Opened 12 years ago Closed 12 years ago

JSRuntime::initSelfHosting may return an uninitialized value

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

Attached patch Patch (v1)Splinter Review
      No description provided.
Attachment #671135 - Flags: review?(jwalden+bmo)
Comment on attachment 671135 [details] [diff] [review]
Patch (v1)

Review of attachment 671135 [details] [diff] [review]:
-----------------------------------------------------------------

Stealing review as it fixes a stupid bug I introduced. Thanks for the quick fix!
Attachment #671135 - Flags: review?(jwalden+bmo) → review+
Blocks: 784620
https://hg.mozilla.org/integration/mozilla-inbound/rev/43f597d00b4b
Assignee: general → ehsan
Target Milestone: --- → mozilla19
https://hg.mozilla.org/mozilla-central/rev/43f597d00b4b
Status: NEW → RESOLVED
Closed: 12 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: