Bug 801344 - Make sure that JSRuntime::initSelfHosting never returns an uninitialized value; r=till